<resources>
    <string name="app_name">CineFast</string>
    <string name="explore_now_nto_experience_the_benefits">Explore now\nto experience the benefits</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="get_started">Get Started</string>
    <string name="cinefast">CineFAST</string>
    <string name="now_showing">Now Showing</string>
    <string name="book_seats">Book Seats</string>
    <string name="trailer">Trailer</string>
    <string name="the_dark_knight">The Dark Knight</string>
    <string name="action_152_min">Action / 152 min</string>
    <string name="inception">Inception</string>
    <string name="sci_fi_148_min">Sci-Fi / 148 min</string>
    <string name="interstellar">Interstellar</string>
    <string name="adventure_169_min">Adventure / 169 min</string>
    <string name="proceed_to_snacks">Proceed to Snacks</string>
    <string name="selected">Selected</string>
    <string name="booked">Booked</string>
    <string name="available">Available</string>
    <string name="seats_0_total_0">Seats: 0 | Total: $0</string>
    <string name="select_items">Select Items</string>
    <string name="snacks_amp_drinks"><![CDATA[Snacks & Drinks]]></string>
    <string name="popcorn">Popcorn</string>
    <string name="large_buttered">Large / Buttered</string>
    <string name="_8_99">$8.99</string>
    <string name="_0">0</string>
    <string name="subtract">-</string>
    <string name="addition">+</string>
    <string name="nachos">Nachos</string>
    <string name="with_cheese_dip">With Cheese Dip</string>
    <string name="_7_99">$7.99</string>
    <string name="soft_drink">Soft Drink</string>
    <string name="large_any_flavor">Large / Any Flavor</string>
    <string name="_5_99">$5.99</string>
    <string name="candy_mix">Candy Mix</string>
    <string name="assorted_candies">Assorted Candies</string>
    <string name="_6_99">$6.99</string>
    <string name="booking_details">Booking Details</string>
    <string name="send_ticket">Send Ticket</string>
    <string name="total">TOTAL:</string>
    <string name="hello_blank_fragment" />
    <string name="the_hangover">The Hangover</string>
    <string name="comedy_100_min">Comedy / 100 min</string>
    <string name="the_conjuring">The Conjuring</string>
    <string name="horror_112_min">Horror / 112 min</string>
    <string name="shutter_island">Shutter Island</string>
    <string name="mystery_148_min">Mystery / 148 min</string>
    <string name="reset">Reset</string>
    <string name="confirm">Confirm</string>


</resources>