<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:background="#1A1F2B"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/SnackImage"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/popcorn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/SnackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SnackDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large_buttered"
            android:textColor="#888888"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/SnackPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtract"
                android:textSize="20sp"
                android:backgroundTint="#333A4D"
                />


            <TextView
                android:id="@+id/tvQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/_0"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addition"
                android:textSize="15sp"
                android:backgroundTint="#D32F2F"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>